Attempt at style

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,1 +1,12 @@
+#big_box {
+  margin-top: 20px;
+  margin-left: 200px;
+  margin-right: 200px
 
+  padding: 10px 150px 10px 150px;
+
+  text-align: left;
+}
+#section_head{
+    text-align: center:center;
+}
