--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,11 +1,32 @@
 #bigbox {
-  margin-top: 20px;
-  margin-left: 200px;
-  margin-right: 200px
+!<-- width: 800px;
+margin:40px auto 60px; -->
+margin-top: 20px;
+margin-left: 150px;
+margin-right: 150px;
 
-  padding: 10px 150px 10px 150px;
+padding: 10px 150px 10px 150px;
 
-  border-radius: 15px
-  
-  text-align: left;
+text-align: left;
+
+background-color: lightgray
+}
+#myname{
+  text-align: center;
+}
+#sectionhead{
+  text-align: center;
+}
+
+h1{
+    font-size: 36px;
+    margin-bottom: -23px;
+}
+h3{
+  font-size: 20px;
+  margin-bottom: -10px;
+}
+ul{
+  list-style-type: square;
+  list-style-position: outside;
 }
