--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,7 +9,7 @@ padding: 10px 150px 10px 150px;
 
 text-align: left;
 
-background-color: red
+background-color: lightgray
 }
 #myname{
   text-align: center;
