--- a/stylesheet.css
+++ b/stylesheet.css
@@ -27,20 +27,22 @@ h1{
 }
 
 .blurbBubble {
-   background-color: black;
-   color: white; 
+   background-color: lightgray;
+   /* color: white;  */
    /* width: 70%; */
    text-align: center;
    font-size: 1.7em;
-   border-radius: 6%;
+   border: 3px solid black;
+   border-radius: 3%;
    padding: 10px;
    margin-bottom: 30px;
+   box-shadow: 10px 10px 3px grey;
 }
 
 h2 {
     font-size: 2em;
 }
  
-.whiteURL {
+/* .whiteURL {
     color: white;
-}
+} */
