--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,9 @@
+body {
+    background: url("watercolor.jpg");
+    background-repeat: no-repeat;;
+    background-size: 100% 100%;
+}
+
 h1{
     font-size: 36px;
     margin-bottom: -23px;
@@ -27,12 +33,12 @@ h1{
 }
 
 .blurbBubble {
-   background-color: gainsboro;
+   background-color: aliceblue;
    /* color: white;  */
    /* width: 70%; */
    text-align: center;
    font-size: 1.7em;
-   border: 3px solid black;
+   /* border: 3px solid black; */
    border-radius: 5%;
    padding: 10px;
    margin-bottom: 30px;
@@ -52,15 +58,30 @@ h2 {
 }
 
 .blurbBubble2 {
-    background-color: gainsboro;
+    background-color: aliceblue;
     /* color: white;  */
     width: 45%;
     text-align: center;
     font-size: 1.7em;
-    border: 3px solid black;
+    /* border: 3px solid black; */
     border-radius: 5%;
     padding: 10px;
-    margin: 12px;
+    margin-right: 15px;
+    margin-bottom: 30px;
+    box-shadow: 10px 10px 3px grey;
+    float: left;
+ }
+
+ .blurbBubble3 {
+    background-color: aliceblue;
+    /* color: white;  */
+    width: 45%;
+    text-align: center;
+    font-size: 1.7em;
+    /* border: 3px solid black; */
+    border-radius: 5%;
+    padding: 10px;
+    margin-left: 35px;
     margin-bottom: 30px;
     box-shadow: 10px 10px 3px grey;
     float: left;
